fix: Use gap for news teaser on mobile

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -237,3 +237,15 @@ img {
   margin-bottom: 2rem;
   width: 100%;
 }
+
+.o-startpage__news-teaser-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+
+  @media (max-width: #{$breakpoint-md}) {
+    display: flex;
+    flex-direction: column;
+  }
+
+}
